--- a/task-manager/config/dev.env
+++ b/task-manager/config/dev.env
@@ -1,4 +1,4 @@
 PORT=3000
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=
 JWT_SECRET=mynewcoursenesssss
 MONGODB_URL=mongodb://127.0.0.1:27017/task-manager-api
